--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .menu {
     list-style-type: none;
-    margin-left: auto;
+    margin: 0;
+    padding: 0 ;
     display: none;
     display: flex;
     background-color: green;
