--- a/style.css
+++ b/style.css
@@ -2,8 +2,6 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0 ;
-    display: none;
     display: flex;
     background: #000000;
-
-}
+};
