--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-ul {
+nav {
     list-style-type: none;
     margin: 0;
-    padding: 0 ;
+    padding: 0;
     display: flex;
-    background: #000000;
-};
+    background: black;
+}
